--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header{
     justify-content: center;
 }
 .header-container{
-    width:1047px;
+    width:1160px;
 }
 .top-manu{
     display: flex;
@@ -39,3 +39,211 @@ a{
 /---End------------------- */
 /*-------------top section-----------
 ----------------------------Start */
+
+.top-sectio{
+ display: flex;
+ justify-content: center;
+}
+.top-container{
+     display:grid;
+     grid-template-columns: repeat(2,1fr);
+}
+.top-button{
+    width: 582px;
+    height: 270px;
+    margin-top: 145px;
+}
+.top-h2{
+    color: #3A3A3A;
+    font-size: 52px;
+    margin-bottom: 16px;
+}
+.top-peragraph{
+    Width:505px;
+    Height:60.9px;
+    font-size: 16px;
+    margin-bottom: 16px;
+}
+.button{
+    width:196px;
+    height: 44px;
+    background: #E02C6D;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 10px 20px 10px;
+    border-radius:41px;
+}
+.left{
+    padding-left: 8px;
+}
+.camera,.optima img{
+    width: 90%;
+}
+.top-imgo{
+   width:475px;
+   height:800px;
+   padding-top: 50px;
+   position: relative;
+   padding-left: 131px;
+}
+.camera{
+    width: 440px;
+    height: 414px;
+    position: absolute;
+    top:50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width:688) {
+     
+    }
