--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ a{
 .left{
     padding-left: 8px;
 }
-.camera,.optima img{
-    width: 90%;
+img{
+    width: 100%;
 }
 .top-imgo{
    width:475px;
@@ -137,6 +137,8 @@ product section Start manu
 .bloge{
     width: 1047px;
     height: 1662px;
+    position: relative;
+    margin-bottom: 140px;
 }
 .popular-calcoletion{
     display: grid;
@@ -184,7 +186,7 @@ span{
 }
 .arrow{
     text-align: right;
-    margin-right: 23%;
+    margin-right: -193%;
     font-weight: bold;
     color: #E02C6D;
     margin-top: 50px;
@@ -192,49 +194,6 @@ span{
 /* ---------------------------------------
 product section End
 ---------------------------------- */
-
-/* --------------------------------------------------
-       LAST PAGE SECTION START
------------------------------------ */
-.anim-ation{
-    width: 404px;
-    height: 270px;
-    animation: identifier 5s ease-in-out 1 infinite alternate;
-}
-.animation-section{
-    display: flex;
-    justify-content: center; 
-}
-.content-area{
-    width: 1110px;
-    height: 270px;
-    margin-top: 100px;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    margin-bottom: 100px;
-}
-.half-width{
-    width: 610px;
-    height: 224px;
-}
-.hedding{
-    font-size: 38px;
-    color: #0A0826;
-    font-weight: 700;
-}
-.heding-p{
-    font-size: 16px;
-    color: #6C6C6C;
-    margin-bottom:20px;
-}
-.squar-button{
-    background: #E02C6D;
-    width: 155px;
-    height: 24px;
-    color: #FFFFFF;
-    padding: 10px 24px;
-    font-size: 16px;
-}
 /* footer box-------------------------------
 ---------------------------- */
 footer{
@@ -263,3 +222,87 @@ footer{
     color: #FFFFFF;
     padding-left: 20px;
 }
+/* ---------------------------------------
+       Decstop Vertion 
+------------------------------------- */
+@media screen and (max-width:1312px) {
+    .top-container{
+        grid-template-columns: repeat(2,1fr);
+   }
+    .popular-calcoletion {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+      }
+    }
+
+    /* ------------------------------------
+        Teblate version Media quray
+    ---------------------------------- */
+    @media only screen and (max-width:992px){
+        .top-container{
+            grid-template-columns: repeat(1,1fr);
+       }
+        .popular-calcoletion {
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+          }
+    }
+/* --------------------------------------
+         START MEDIA QURY 
+------------------------------------ */
+@media only screen and (max-width:688px){
+    main{
+        justify-content: center;
+    }
+    .top-sectio{
+        width: 100%;
+       }
+       .top-container{
+            grid-template-columns: repeat(1,1fr);
+       }
+       .top-h2 {
+        color: #3A3A3A;
+        font-size: 36px;
+        margin-bottom: 16px;
+        text-align: center;
+    }
+    .top-peragraph {
+        Width:400px;
+        Height: 60.9px;
+        font-size: 16px;
+        text-align: center;
+    }
+       .top-button{
+        flex-direction: column;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .logo-size {
+        display: flex;
+        flex-direction:column;
+        justify-content: center;
+        align-items: center;
+    }
+    .popular {
+        margin-top: 190px;
+      }
+    .product-section {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .arrow{
+        text-align: right;
+        margin-right:8%;
+        font-weight: bold;
+        color: #E02C6D;
+        margin-top: 50px;
+    }
+    .popular-calcoletion {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        justify-content: center;
+        justify-items: center;
+    }
+    }
